tests/cases/errors/ptr_unsafe_required.ring
// expect-error: E0405
mod no_unsafe requires {} {
    pub fn try_alloc() {
        let p = alloc(1)
    }
}
